force-app/main/default/objects/Earned_Continuing_Education__c/Earned_Continuing_Education__c.object-meta.xml
<CustomObject>
    <description>PacPoint-KN08312020-Created for CE and INS Portal</description>
    <label>Earned Continuing Education</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Earned Continuing Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Earned Continuing Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>