force-app/main/default/objects/Earned_Continuing_Education__c/fields/BienniumCompare__c.field-meta.xml
<CustomField>
    <fullName>BienniumCompare__c</fullName>
    <formula>IF( Biennium__c  =  LicenseBiennium__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biennium Compare</label>
    <type>Checkbox</type>
</CustomField>