force-app/main/default/objects/Earned_Continuing_Education__c/fields/BienniumMatch__c.field-meta.xml
<CustomField>
    <fullName>BienniumMatch__c</fullName>
    <description>Used to compare the Biennium with Current And Previous Biennium. 00014076</description>
    <formula>( Biennium__c == License__r.CurrentBiennium__c ) || ( Biennium__c == License__r.PreviousBiennium__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biennium Match</label>
    <type>Checkbox</type>
</CustomField>