force-app/main/default/objects/Earned_Continuing_Education__c/fields/CertificateNumber__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumber__c</fullName>
    <formula>ContinuingEducation__r.CertificateNumberFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Number</label>
    <type>Text</type>
</CustomField>