force-app/main/default/objects/Earned_Continuing_Education__c/fields/CertificateNumberText__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumberText__c</fullName>
    <label>Certificate Number Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>