force-app/main/default/objects/Earned_Continuing_Education__c/fields/ContinuingEducation__c.field-meta.xml
<CustomField>
    <fullName>ContinuingEducation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN08312020-Created for CE and INS Portal</description>
    <label>Course Enrollment</label>
    <referenceTo>PrelicenseCEEnrollment__c</referenceTo>
    <relationshipLabel>Earned Continuing Education</relationshipLabel>
    <relationshipName>Earned_Continuing_Education</relationshipName>
    <type>Lookup</type>
</CustomField>