force-app/main/default/objects/Earned_Continuing_Education__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Earned Continuing Education</relationshipLabel>
    <relationshipName>Earned_Continuing_Education</relationshipName>
    <type>Lookup</type>
</CustomField>