force-app/main/default/objects/Earned_Continuing_Education__c/fields/Course_Number__c.field-meta.xml
<CustomField>
    <fullName>Course_Number__c</fullName>
    <label>Course Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>