force-app/main/default/objects/Earned_Continuing_Education__c/fields/Credit_Earned_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Earned_Date__c</fullName>
    <defaultValue>DATEVALUE(NOW())</defaultValue>
    <label>Credit Earned Date</label>
    <type>Date</type>
</CustomField>