force-app/main/default/objects/Earned_Continuing_Education__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <description>PacPoint-KN09042020-Created for PVL CE and INS Portal</description>
    <label>Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>