force-app/main/default/objects/Earned_Continuing_Education__c/fields/CreditsEarned__c.field-meta.xml
<CustomField>
    <fullName>CreditsEarned__c</fullName>
    <formula>IF(ContinuingEducation__r.Course__r.Subject__r.CreditsForCESubjects__c &gt; 0, 


ContinuingEducation__r.Course__r.Subject__r.CreditsForCESubjects__c, 


 Credits__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>