force-app/main/default/objects/Earned_Continuing_Education__c/fields/EnrollmentMakeUp__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentMakeUp__c</fullName>
    <formula>ContinuingEducation__r.MakeUpCredit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make Up</label>
    <type>Checkbox</type>
</CustomField>