force-app/main/default/objects/Earned_Continuing_Education__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <description>PacPoint-KN08312020-Created for CE and INS Portal</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Earned Continuing Education</relationshipLabel>
    <relationshipName>Earned_Continuing_Education</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>