force-app/main/default/objects/Earned_Continuing_Education__c/fields/LicenseBiennium__c.field-meta.xml
<CustomField>
    <fullName>LicenseBiennium__c</fullName>
    <formula>License__r.BienniumYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Biennium</label>
    <type>Text</type>
</CustomField>