force-app/main/default/objects/Earned_Continuing_Education__c/fields/Makeup__c.field-meta.xml
<CustomField>
    <fullName>Makeup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Makeup</label>
    <type>Checkbox</type>
</CustomField>